<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mario"      
    tools:context=".SlotMachine" >

        <ImageView
            android:id="@+id/slot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
        	android:layout_marginTop="50dp"  
        	android:padding="2dp"                   
            android:contentDescription="@string/slot2"/>
            
        <ImageView
            android:id="@+id/slot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_marginTop="50dp"     
        	android:layout_alignParentTop="true" 
        	android:layout_toLeftOf="@+id/slot2"
        	android:layout_marginRight="10dp"
        	android:padding="2dp"                                          	               
            android:contentDescription="@string/slot1"/>

        <ImageView
            android:id="@+id/slot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_marginTop="50dp"     
        	android:layout_alignParentTop="true" 
        	android:layout_toRightOf="@+id/slot2"
        	android:layout_marginLeft="10dp"        
        	android:padding="2dp"                          
            android:contentDescription="@string/slot3"/>

    <Button
        android:id="@+id/spinbutton"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" 
        android:layout_marginBottom="10dp"         
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/betmaxbutton"
        android:background="@drawable/redbutton"  
        android:text="@string/spin" />

    <Button
        android:id="@+id/betmaxbutton"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"  
        android:background="@drawable/goldbutton"  
        android:layout_alignParentBottom="true"        
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"        
        android:text="@string/betmax" />

</RelativeLayout>